# calendar-bot

./: .gitignore  README.md  calendar_group.py  datahandler.py  env.example  group_calendar.py  group_help.py  group_settings.py  group_timezone.py  help_group.py  main.py  pyproject.toml  requirements.txt  settings_group.py  timezone_group.py  views.py
.github/workflows/: ci.yml
docs/: _config.yml  index.md  privacy-policy.md  terms-of-service.md
lib/: __init__.py
src/calendar_bot/: __init__.py  bot.py  config.py
src/calendar_bot/cogs/: __init__.py  base.py  calendar.py  help.py  settings.py  timezone.py  utility.py
src/calendar_bot/database/: __init__.py  models.py  repository.py
src/calendar_bot/utils/: __init__.py  datetime_parser.py  views.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_datetime_parser.py  test_models.py
